stm_project/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
04:23:08 **** Incremental Build of configuration Debug for project F446RE_Alarm_Project ****
make -j8 all 
arm-none-eabi-gcc "../Src/Services/APP_Services.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F446RETx -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/Services/APP_Services.d" -MT"Src/Services/APP_Services.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/Services/APP_Services.o"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F446RETx -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "F446RE_Alarm_Project.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\.Amgad_Advanced Diploma\Diploma_Work\stm_project\F446RE_Alarm_Project\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="F446RE_Alarm_Project.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: F446RE_Alarm_Project.elf
 
arm-none-eabi-size   F446RE_Alarm_Project.elf 
arm-none-eabi-objdump -h -S  F446RE_Alarm_Project.elf  > "F446RE_Alarm_Project.list"
   text	   data	    bss	    dec	    hex	filename
  16408	    488	   2144	  19040	   4a60	F446RE_Alarm_Project.elf
Finished building: default.size.stdout
 
Finished building: F446RE_Alarm_Project.list
 
17:09:55 **** Build of configuration Debug for project F446RE_SVC ****
make -j8 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f446retx.d" -MT"Startup/startup_stm32f446retx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Startup/startup_stm32f446retx.o" "../Startup/startup_stm32f446retx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F446RETx -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F446RETx -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F446RETx -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
../Src/main.c:26:19: error: unknown type name 'uint32_t'
   26 | void SVCHandler_C(uint32_t* cop_pu32StackFrameBase) // compiler will automatically pass MSP to R0
      |                   ^~~~~~~~
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.
17:10:17 **** Incremental Build of configuration Debug for project F446RE_SVC ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F446RETx -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c: In function 'SVCHandler_C':
../Src/main.c:31:36: warning: initialization of 'uint8_t *' {aka 'unsigned char *'} from 'uint32_t' {aka 'long unsigned int'} makes pointer from integer without a cast [-Wint-conversion]
   31 |  uint8_t* local_pu8ReturnAddress = cop_pu32StackFrameBase[6];
      |                                    ^~~~~~~~~~~~~~~~~~~~~~
../Src/main.c:29:10: warning: variable 'Local_u8SVCnumber' set but not used [-Wunused-but-set-variable]
   29 |  uint8_t Local_u8SVCnumber;
      |          ^~~~~~~~~~~~~~~~~
arm-none-eabi-gcc -o "F446RE_SVC.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\.Amgad_Advanced Diploma\Diploma_Work\stm_project\F446RE_SVC\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="F446RE_SVC.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: F446RE_SVC.elf
 
arm-none-eabi-size   F446RE_SVC.elf 
arm-none-eabi-objdump -h -S  F446RE_SVC.elf  > "F446RE_SVC.list"
   text	   data	    bss	    dec	    hex	filename
    756	      8	   1568	   2332	    91c	F446RE_SVC.elf
Finished building: default.size.stdout
 
Finished building: F446RE_SVC.list
 
17:10:26 **** Incremental Build of configuration Debug for project F446RE_SVC ****
make -j8 all 
arm-none-eabi-size   F446RE_SVC.elf 
   text	   data	    bss	    dec	    hex	filename
    756	      8	   1568	   2332	    91c	F446RE_SVC.elf
Finished building: default.size.stdout
 
17:33:22 **** Incremental Build of configuration Debug for project F446RE_SVC ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F446RETx -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c: In function 'SVCHandler_C':
../Src/main.c:31:36: warning: initialization of 'uint8_t *' {aka 'unsigned char *'} from 'uint32_t' {aka 'long unsigned int'} makes pointer from integer without a cast [-Wint-conversion]
   31 |  uint8_t* local_pu8ReturnAddress = cop_pu32StackFrameBase[6];
      |                                    ^~~~~~~~~~~~~~~~~~~~~~
arm-none-eabi-gcc -o "F446RE_SVC.elf" @"objects.list"   -mcpu=cortex-m4 -T"D:\.Amgad_Advanced Diploma\Diploma_Work\stm_project\F446RE_SVC\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="F446RE_SVC.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: F446RE_SVC.elf
 
arm-none-eabi-size   F446RE_SVC.elf 
arm-none-eabi-objdump -h -S  F446RE_SVC.elf  > "F446RE_SVC.list"
   text	   data	    bss	    dec	    hex	filename
    772	      8	   1568	   2348	    92c	F446RE_SVC.elf
Finished building: default.size.stdout
 
Finished building: F446RE_SVC.list
 
